<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barcode Scanner</string>
    <string name="company">Aga Khan University Hospital</string>
    <string name="action_settings">Settings</string>

    <string name="main_result_success">Successfully returned: </string>
    <string name="main_result_failed">Failed to return barcode value</string>

    <string name="scan_button_start">Start</string>
    <string name="scan_button_continue">Continue</string>
    <string name="scan_button_restart">Restart</string>

    <string name="exit_button_label">Exit</string>

    <string name="start_content">Please press Start to scan first barcode</string>
    <string name="continue_content">First Barcode has been Registered.\n\n Please press Continue to scan second barcode</string>
    <string name="restart_content">Please press Restart to scan first barcode again.</string>

    <string name="barcode_equal">Barcodes are equal</string>
    <string name="barcode_not_equal">Barcodes are not equal</string>
</resources>
