<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.singingbush.barcodescanner.MainActivity"
    tools:ignore="MergeRootFrame">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/start_content"
        android:textColor="#33b5e5"
        android:textSize="30sp"
        android:textStyle="bold" />


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/scan_button_zbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:text="@string/scan_button_start"
                android:onClick="onClick"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:background="#00ffffff"
                android:text="@string/exit_button_label"
                android:onClick="onClick"
                android:textColor="@color/White" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/barcode_equal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:visibility="invisible"
        android:weightSum="1">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/tick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center|center_horizontal"
            android:text="@string/barcode_equal"
            android:textColor="#33b5e5"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barcode_not_equal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:visibility="invisible"
        android:weightSum="1">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/cross" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center|center_horizontal"
            android:text="@string/barcode_not_equal"
            android:textColor="#33b5e5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>
</FrameLayout>
